conditional functions for post fields

--- a/site/features.html
+++ b/site/features.html
@@ -26,7 +26,7 @@
 	<div id="content">
 <section><header>Features</header>
 	<article>
-		
+		<figure><img src='img/600-130609-escampistival-09.png' alt='No database' /></figure>
 		<header>No database</header>
 		<div>simplitt stores all your content in a single flat file.</div><footer><a href='no-database.html'>Permalink</a></footer>
 	</article>
@@ -47,6 +47,12 @@
 		
 		<header>Easy update</header>
 		<div>simplitt makes all the work: just run a script and simplitt will recompile and update your entire site.</div><footer><a href='easy-update.html'>Permalink</a></footer>
+	</article>
+
+	<article>
+		
+		<header>No description</header>
+		<footer><a href='no-description.html'>Permalink</a></footer>
 	</article>
 </section>
 </div><!-- #content -->
