--- a/site/no-description.html
+++ b/site/no-description.html
@@ -26,9 +26,9 @@
 	<div id="content">
 
 	<article>
-		<figure><img src='img/600-130609-escampistival-09.png' alt='No database' /></figure>
-		<header>No database</header>
-		<div>simplitt stores all your content in a single flat file.</div><footer>Context: <a href='features.html'>Features</a></footer>
+		
+		<header>No description</header>
+		<footer>Context: <a href='features.html'>Features</a></footer>
 	</article>	
 
 </div><!-- #content -->
