--- a/site/index.html
+++ b/site/index.html
@@ -25,30 +25,51 @@
 	<hr />
 	<div id="content">
 <section><header>Features</header>
-	<article>
-		
-		<header>No database</header>
-		<div>simplitt stores all your content in a single flat file.</div><footer><a href='no-database.html'>Permalink</a></footer>
-	</article>
-
-	<article>
-		
-		<header>Static site</header>
-		<div>simplitt generates a complete static site from your single data file: home page, category pagesand post pages.</div><footer><a href='static-site.html'>Permalink</a></footer>
-	</article>
-
-	<article>
-		
-		<header>No installation</header>
-		<div>simplitt needs no installation. Just set up some parameters and upload the files to your server.</div><footer><a href='no-installation.html'>Permalink</a></footer>
-	</article>
-
-	<article>
-		
-		<header>Easy update</header>
-		<div>simplitt makes all the work: just run a script and simplitt will recompile and update your entire site.</div><footer><a href='easy-update.html'>Permalink</a></footer>
-	</article>
-</section>
+<article>
+<div>
+	<figure><img src='img/600-130609-escampistival-09.png' alt='No database' /></figure>
+	<header><h3>No database</h3></header>
+	<div>simplitt stores all your content in a single flat file.</div>
+	<footer><a href='no-database.html' title='No database'>Permalink</a></footer>
+</div>
+</article>
+img/600-130609-escampistival-09.png
+<article>
+<div>
+	
+	<header><h3>Static site</h3></header>
+	<div>simplitt generates a complete static site from your single data file: home page, category pagesand post pages.</div>
+	<footer><a href='static-site.html' title='Static site'>Permalink</a></footer>
+</div>
+</article>
+img/
+<article>
+<div>
+	
+	<header><h3>No installation</h3></header>
+	<div>simplitt needs no installation. Just set up some parameters and upload the files to your server.</div>
+	<footer><a href='no-installation.html' title='No installation'>Permalink</a></footer>
+</div>
+</article>
+img/
+<article>
+<div>
+	
+	<header><h3>Easy update</h3></header>
+	<div>simplitt makes all the work: just run a script and simplitt will recompile and update your entire site.</div>
+	<footer><a href='easy-update.html' title='Easy update'>Permalink</a></footer>
+</div>
+</article>
+img/
+<article>
+<div>
+	
+	<header><h3>No description</h3></header>
+	
+	<footer><a href='no-description.html' title='No description'>Permalink</a></footer>
+</div>
+</article>
+img/</section>
 </div><!-- #content -->
 </body>
 </html>
